[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Proyectiles/DisparoRojo.png" type="Texture" id=1]
[ext_resource path="res://Juego/Proyectiles/ProyectilBase.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.2367, 6.71435 )

[node name="ProyectilBase" type="Area2D"]
z_index = 45
z_as_relative = false
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 2, 1, 1, 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_ProyectilBase_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ProyectilBase_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
